--- a/MDK-ARM/.eide/eide.yml
+++ b/MDK-ARM/.eide/eide.yml
@@ -23,6 +23,8 @@ virtualFolder:
                 - path: ../Core/Src/main.c
                 - path: ../Core/Src/gpio.c
                 - path: ../Core/Src/tim.c
+                - path: Core/Src/ps2/ps2.c
+                - path: Core/Src/mecanum/mecanum.c
                 - path: ../Core/Src/usart.c
                 - path: ../Core/Src/stm32f1xx_it.c
                 - path: ../Core/Src/stm32f1xx_hal_msp.c
